--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel= stylesheet href="css/main.css">
-    <link rel= stylesheet href="css/nav.css">
-    <link rel= stylesheet href="css/sections/home.css">
-    <link rel= stylesheet href="css/sections/about.css">
-    <link rel= stylesheet href="css/sections/projects.css">
-    <link rel= stylesheet href="css/sections/skills.css">
-    <link rel= stylesheet href="css/sections/services.css">
-    <link rel= stylesheet href="css/sections/contact.css">
+    <meta name="description" content="Portfolio d'Adrien MOUTET, développeur fullstack passionné et motivé. N'hésitez pas à me suivre sur mes réseaux et à me contacter pour toute demande de projet.">
+    <link rel="canonical" href="https://adrienmoutet.fr">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/sections/home.css">
+    <link rel="stylesheet" href="css/sections/about.css">
+    <link rel="stylesheet" href="css/sections/projects.css">
+    <link rel="stylesheet" href="css/sections/skills.css">
+    <link rel="stylesheet" href="css/sections/services.css">
+    <link rel="stylesheet" href="css/sections/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Portfolio - Adrien MOUTET</title>
 </head>
