--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio d'Adrien MOUTET, développeur passionné et motivé. N'hésitez pas à me suivre sur mes réseaux et à me contacter pour toute demande de projet.">
-    <link rel="canonical" href="https://adrienmoutet.fr">
+    <link rel="canonical" href="https://adrien-moutet.fr">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/sections/home.css">
