--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" href="css/sections/services.css">
     <link rel="stylesheet" href="css/sections/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
     <title>Portfolio - Adrien MOUTET</title>
 </head>
     <body>
