--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-M2GSQ9ZR');</script>
-        <!-- End Google Tag Manager -->
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio d'Adrien MOUTET, développeur passionné et motivé. N'hésitez pas à me suivre sur mes réseaux et à me contacter pour toute demande de projet.">
@@ -31,7 +31,7 @@
         <!-- Google Tag Manager (noscript) -->
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2GSQ9ZR"
             height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-            <!-- End Google Tag Manager (noscript) -->
+        <!-- End Google Tag Manager (noscript) -->
         <header>
             <nav>
                 <div class="logo">
@@ -42,6 +42,7 @@
                     <li><a href="#projects" data-state="0">Projets</a></li>
                     <li><a href="#skills"   data-state="0">Compétences</a></li>
                     <li><a href="#services" data-state="0">Services</a></li>
+                    <li><a href="/public/cv.html" data-state="0">Mon CV</a></li>
                     <li><a href="#contact"  data-state="0">Contact</a></li>
                     <script>
                         const navItems = document.querySelectorAll('nav ul li a');
