page presque done

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="#projects" data-state="0">Projets</a></li>
                     <li><a href="#skills"   data-state="0">Compétences</a></li>
                     <li><a href="#services" data-state="0">Services</a></li>
-                    <li><a href="/public/cv.html" data-state="0">Mon CV</a></li>
+                    <li><a href="/cv.html" data-state="0">Mon CV</a></li>
                     <li><a href="#contact"  data-state="0">Contact</a></li>
                     <script>
                         const navItems = document.querySelectorAll('nav ul li a');
