--- a/cv.html
+++ b/cv.html
@@ -12,15 +12,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio d'Adrien MOUTET, développeur passionné et motivé. N'hésitez pas à me suivre sur mes réseaux et à me contacter pour toute demande de projet.">
     <link rel="canonical" href="https://adrien-moutet.fr/cv">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/pages/cv.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/nav.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/pages/cv.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="../manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <title>CV - Adrien MOUTET</title>
 </head>
 <body>
@@ -32,14 +32,14 @@
     <header>
         <nav>
             <div class="logo">
-                <h1><a href="#home">A-MOUTET</a></h4>
+                <h1><a href="/index.html#home">A-MOUTET</a></h4>
             </div>
             <ul>
                 <li><a href="/index.html#about-me" data-state="0">À propos</a></li>
                 <li><a href="/index.html#projects" data-state="0">Projets</a></li>
                 <li><a href="/index.html#skills"   data-state="0">Compétences</a></li>
                 <li><a href="/index.html#services" data-state="0">Services</a></li>
-                <li><a href="/public/cv.html" data-state="0">Mon CV</a></li>
+                <li><a href="/cv.html" data-state="0">Mon CV</a></li>
                 <li><a href="/index.html#contact"  data-state="0">Contact</a></li>
                 <script>
                     const navItems = document.querySelectorAll('nav ul li a');
@@ -63,73 +63,127 @@
     </header>
 
     <main>
-        <section>
-            <div id="profil">
-                <h2>Mon Profil</h2>
-                <div class="content">
-                    <div class="left">
-                        <img src="../img/profil.jpg" alt="Photo de profil">
-                    </div>
-                    <div class="right">
-                        <h3>Adrien MOUTET</h3>
-                        <p>Actuellement étudiant en BUT Informatique à
-l’IUT d’Arles, je souhaite rejoindre une école
-d’ingénieur afin de clôturer mon parcours
-scolaire et m’insérer pleinement dans le marché
-du travail.</p>
+        <section id="resume">
+            <div class="right">
+                <div id="profil" class="category">
+                    <h2>Mon Profil</h2>
+                    <p>Actuellement étudiant en BUT Informatique à l’IUT d’Arles, je souhaite rejoindre une école d’ingénieur afin de clôturer mon parcours scolaire et m’insérer pleinement dans le marché du travail.</br>Passionné par le développement logiciel et les nouvelles technologies, j'ai une appétence particulière pour le développement web (front-end et back-end) et logiciel (C#, Java, C++).</p>
+                </div>
+                <div id="softskills" class="category">
+                    <h2>Mes Soft Skills</h2>
+                    <ul>
+                        <li>
+                            <h3>Communication</h3>
+                            <p>Capacité à communiquer efficacement avec les autres membres de l'équipe.</p>
+                        </li>
+                        <li>
+                            <h3>Esprit d'équipe</h3>
+                            <p>J'aime placer la réussite collective avant la réussite individuelle.</p>
+                        </li>
+                        <li>
+                            <h3>Adaptabilité</h3>
+                            <p>Je possède une grande agilité pour m'adapter à de nouvelles situations.</p>
+                        </li>
+                        <li>
+                            <h3>Créativité</h3>
+                            <p>Je suis capable de trouver des solutions innovantes à des problèmes complexes.</p>
+                        </li>
+                        <li>
+                            <h3>Organisation</h3>
+                            <p>Je sais m'organiser pour être le plus efficace possible dans mon travail.</p>
+                        </li>
+                        <li>
+                            <h3>Autonomie</h3>
+                            <p>Je suis capable de travailler seul et de mener à bien un projet de A à Z.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div id="cta" class="category">
+                    <h2>Liens utile</h2>
+                    <ul>
+                        <li>
+                            <a href="https://www.linkedin.com/in/adrien-moutet/" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-linkedin"></i>
+                                <span>LinkedIn</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-github"></i>
+                                <span>GitHub</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.malt.fr/profile/adrienmoutet" target="_blank" rel="noopener noreferrer">
+                                <i class="fas fa-briefcase"></i>
+                                <span>Malt</span>
+                            </a>
+                        </li>
+                        
+                        <li>
+                            <a href="mailto:" target="_blank" rel="noopener noreferrer">
+                                <i class="fas fa-envelope"></i>
+                                <span>Email</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="button">
+                        <a href="/public/cv.pdf" download="cv_adrien_moutet.pdf">Télécharger mon CV</a>
                     </div>
                 </div>
             </div>
-            <div id="xp">
-                <h2>Mes Expériences personnelles</h2>
-                <ul>
-                    <li>
-                        <h3>Président de l'association "AE2i"</h3>
-                        <p>Gestion de l'association, communication, gestion de projet.</p>
-                    </li>
-                    <li>
-                        <h3>Développement de projets personnels</h3>
-                        <ul>
-                            <li>
-                                <h4>Shift Trackr</h4>
-                                <p>Application de gestion d'emploi du temps.</p>
-                            </li>
-                            <li>
-                                <h4>Portfolio</h4>
-                                <p>Site web de présentation de mes compétences et de mes projets.</p>
-                            </li>
-                            <li>
-                                <h4>Tileset Drawer</h4>
-                                <p>Application de dessin de tileset pour jeux vidéo.</p>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <h3>Développement de portfolio pour artistes</h3>
-                        <p>Création de site web pour des artistes locaux. (en cours de conception)</p>
-                    </li>
-                </ul>
-            </div>
-            <div id="interets">
-                <h2>Mes Centre d'intérêts</h2>
-                <ul>
-                    <li>
-                        <h3>Musique</h3>
-                        <p>Guitare, Collection de disques, MAO.</p>
-                    </li>
-                    <li>
-                        <h3>Cuisine</h3>
-                        <p>Française et Asiatique.</p>
-                    </li>
-                    <li>
-                        <h3>Informatique</h3>
-                        <p>Création d'un homelab pour héberger mes projets personnels et auto-héberger mes services.</p>
-                    </li>
-                </ul>
+            <div class="left">
+                <div id="xp" class="category">
+                    <h2>Mes Expériences personnelles</h2>
+                    <ul>
+                        <li>
+                            <h3>Président de l'association "AE2i"</h3>
+                            <p>Gestion de l'association, communication, gestion de projet.</p>
+                        </li>
+                        <li>
+                            <h3>Développement de projets personnels</h3>
+                            <ul>
+                                <li>
+                                    <h4>Shift Trackr</h4>
+                                    <p>Application de gestion d'emploi du temps.</p>
+                                </li>
+                                <li>
+                                    <h4>Portfolio</h4>
+                                    <p>Site web de présentation de mes compétences et de mes projets.</p>
+                                </li>
+                                <li>
+                                    <h4>Tileset Drawer</h4>
+                                    <p>Application de dessin de tileset pour jeux vidéo.</p>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>Développement de portfolio pour artistes</h3>
+                            <p>Création de site web pour des artistes locaux. (en cours de conception)</p>
+                        </li>
+                    </ul>
+                </div>
+                <div id="interets" class="category">
+                    <h2>Mes Centre d'intérêts</h2>
+                    <ul>
+                        <li>
+                            <h3>Musique</h3>
+                            <p>Guitare, Collection de disques, MAO.</p>
+                        </li>
+                        <li>
+                            <h3>Cuisine</h3>
+                            <p>Française et Asiatique.</p>
+                        </li>
+                        <li>
+                            <h3>Informatique</h3>
+                            <p>Création d'un homelab pour héberger mes projets personnels et auto-héberger mes services.</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
 
-        <section>
+        <section id="timeline">
             <div id="school">
                 <h2>Les Formations que j'ai suivies</h2>
                 <div class="timeline">
