page cv terminée

--- a/cv.html
+++ b/cv.html
@@ -102,13 +102,13 @@
                     <h2>Liens utile</h2>
                     <ul>
                         <li>
-                            <a href="https://www.linkedin.com/in/adrien-moutet/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/adrien-moutet-821087238/" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin"></i>
                                 <span>LinkedIn</span>
                             </a>
                         </li>
                         <li>
-                            <a href="" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/ADFuji" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-github"></i>
                                 <span>GitHub</span>
                             </a>
@@ -121,7 +121,7 @@
                         </li>
                         
                         <li>
-                            <a href="mailto:" target="_blank" rel="noopener noreferrer">
+                            <a href="mailto:adrien.moutetcvl@gmail.com" target="_blank" rel="noopener noreferrer">
                                 <i class="fas fa-envelope"></i>
                                 <span>Email</span>
                             </a>
