préparation pour la prod

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         </footer>
 
         <script>
-            let dev = true;
+            let dev = false;
             // si la résolution est inférieure à 1920*1080, on affiche un message pour dire d'aller sur un support adapté
             //if (window.innerWidth < 1080 || window.innerHeight < 600) {
             if (!dev && (window.innerWidth < 1920 || window.innerHeight < 1080)) {
