correction message info

--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@
         </footer>
 
         <script>
-            let dev = false;
+            let dev = true;
             // si la résolution est inférieure à 1920*1080, on affiche un message pour dire d'aller sur un support adapté
             //if (window.innerWidth < 1080 || window.innerHeight < 600) {
-            if (!dev && (window.innerWidth < 1920 || window.innerHeight < 1080)) {
+            if (!dev && (window.innerWidth < 1080 || window.innerHeight < 600)) {
                 const main = document.querySelector('body');
                 main.innerHTML = '';
                 const message = document.createElement('div');
