--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio d'Adrien MOUTET, développeur passionné et motivé. N'hésitez pas à me suivre sur mes réseaux et à me contacter pour toute demande de projet.">
-    <link rel="canonical" href="https://adrien-moutet.fr">
+    <meta name="description" content="Portfolio d'Adrien MOUTET, développeur passionné et motivé. N'hésitez pas à me suivre sur mes réseaux sociaux et à me contacter pour toutes demandes de projet.">
+    <link rel="canonical" href="https://www.adrien-moutet.fr">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/sections/home.css">
@@ -30,7 +30,6 @@
         // print vw and vh
         const vw = Math.max(document.documentElement.clientWidth || 0, window.innerWidth || 0);
         const vh = Math.max(document.documentElement.clientHeight || 0, window.innerHeight || 0);
-        console.log(`vw: ${vw}, vh: ${vh}`);
     </script>
 </head>
     <body>
